@@ -242,6 +242,7 @@ container solution, like Docker or Kubernetes.)");
                   "executing JavaScript actions.",
                   new UInt64Parameter(&_nrMaxContexts),
                   arangodb::options::makeFlags(
+                      arangodb::options::Flags::Dynamic,
                       arangodb::options::Flags::DefaultNoComponents,
                       arangodb::options::Flags::OnCoordinator,
                       arangodb::options::Flags::OnSingle))
@@ -549,12 +550,12 @@ void V8DealerFeature::start() {
 
   // try to guess a suitable number of contexts
   if (0 == _nrMaxContexts) {
-    // automatic maximum number of contexts should not be below 16
+    // automatic maximum number of contexts should not be below 8
     // this is because the number of cores may be too few for the cluster
     // startup to properly run through with all its parallel requests
     // and the potential need for multiple V8 contexts
-    _nrMaxContexts =
-        (std::max)(uint64_t(0 /*scheduler->concurrency()*/), uint64_t(16));
+    auto& sf = server().getFeature<SchedulerFeature>();
+    _nrMaxContexts = std::max(sf.maximalThreads(), uint64_t(8));
   }
 
   if (_nrMinContexts > _nrMaxContexts) {
